Added spring security